<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:alpha="0.5"
        android:scaleType="centerInside"
        android:src="@drawable/icon_logo_tecnifiser" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginBottom="@dimen/margin_between_view"
                android:adjustViewBounds="true"
                android:background="@drawable/circle_accent"
                android:scaleType="centerInside"
                android:src="@drawable/icon_sushi_logo" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Display1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_between_view"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/textVersion"
                style="@style/Base.TextAppearance.AppCompat.Headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_between_view"
                android:gravity="center"
                android:text="@string/test"
                android:textColor="@color/colorAccent" />

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_between_view"
                android:gravity="center"
                android:text="@string/description"
                android:textColor="@android:color/white" />

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_between_view"
                android:gravity="center"
                android:text="@string/copyright"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/text_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_between_view"
                android:gravity="center"
                android:textColor="@color/colorLink"
                android:text="@string/contact"/>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
