<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/margin_between_view"
    tools:context="com.technifiser.activities.HomeActivity">

    <android.support.v7.widget.CardView
        style="@style/CardView.Light"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="@dimen/margin_between_view"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_between_view"
                android:layout_weight="2"
                android:orientation="vertical">

                <View
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/circle_accent"/>

                <ImageView
                    android:id="@+id/image_home"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="fitCenter"
                    android:layout_centerInParent="true"
                    android:background="@drawable/animation_home" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:gravity="center|top"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_welcome"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_between_view"
                    android:gravity="center"
                    android:padding="@dimen/margin_between_view"
                    android:text="@string/welcome" />

                <TextView
                    android:id="@+id/text_permission"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_between_view"
                    android:gravity="center"
                    android:padding="@dimen/margin_between_view"
                    android:text="@string/need_permission" />



            </LinearLayout>

            <Button
                android:id="@+id/button_permission"
                style="@style/ButtonAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_between_view"
                android:text="@string/grant" />

            <Button
                android:id="@+id/button_start"
                style="@style/ButtonAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_between_view"
                android:text="@string/continuea"
                android:visibility="gone"/>


        </LinearLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/text_about"
        style="@style/TextAppearance.AppCompat.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/margin_between_view"
        android:text="@string/about_app" />

</LinearLayout>
